# hermes-llm-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  prd.md  pyproject.toml  runbook.md  tasks.md
gateway/: __init__.py  app.py  backends.py  config.py  models.py  notify.py  state.py  stream.py
scripts/: smoke.sh
tests/: conftest.py  test_app_streaming.py  test_app_strip_tools.py  test_backends_spawn.py  test_stream.py
